working tradebook page
